noinst_PROGRAMS = image_fail_and_failed_images_test_1 image_fail_and_sync_test_2 image_fail_and_sync_test_3 image_fail_and_get_test_1 image_fail_test_1 image_fail_and_status_test_1 image_status_test_1 image_fail_and_stopped_images_test_1 image_fail_and_sync_test_1


dist_image_fail_and_failed_images_test_1_SOURCES = image_fail_and_failed_images_test_1.f90
image_fail_and_failed_images_test_1_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_fail_and_failed_images_test_1_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

dist_image_fail_and_sync_test_2_SOURCES = image_fail_and_sync_test_2.f90
image_fail_and_sync_test_2_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_fail_and_sync_test_2_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

dist_image_fail_and_sync_test_3_SOURCES = image_fail_and_sync_test_3.f90
image_fail_and_sync_test_3_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_fail_and_sync_test_3_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

dist_image_fail_and_get_test_1_SOURCES = image_fail_and_get_test_1.f90
image_fail_and_get_test_1_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_fail_and_get_test_1_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

dist_image_fail_test_1_SOURCES = image_fail_test_1.f90
image_fail_test_1_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_fail_test_1_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

dist_image_fail_and_status_test_1_SOURCES = image_fail_and_status_test_1.f90
image_fail_and_status_test_1_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_fail_and_status_test_1_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

dist_image_status_test_1_SOURCES = image_status_test_1.f90
image_status_test_1_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_status_test_1_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

dist_image_fail_and_stopped_images_test_1_SOURCES = image_fail_and_stopped_images_test_1.f90
image_fail_and_stopped_images_test_1_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_fail_and_stopped_images_test_1_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

dist_image_fail_and_sync_test_1_SOURCES = image_fail_and_sync_test_1.f90
image_fail_and_sync_test_1_FCFLAGS = -fcoarray=lib -L$(MPI_LIB) -lmpi
image_fail_and_sync_test_1_LDADD=$(top_builddir)/src/mpi/mpi_caf.o $(top_builddir)/src/common/caf_auxiliary.o

CLEANFILES = image_fail_and_failed_images_test_1 image_fail_and_sync_test_2 image_fail_and_sync_test_3 image_fail_and_get_test_1 image_fail_test_1 image_fail_and_status_test_1 image_status_test_1 image_fail_and_stopped_images_test_1 image_fail_and_sync_test_1
