add_executable(initialize_mpi initialize_mpi.f90)
target_link_libraries(initialize_mpi OpenCoarrays)

add_executable(register register.f90)
target_link_libraries(register OpenCoarrays)

add_executable(register_rename_me register_rename_me.f90)
target_link_libraries(register_rename_me OpenCoarrays)

add_executable(register_rename_me_too register_rename_me_too.f90)
target_link_libraries(register_rename_me_too OpenCoarrays)

add_executable(allocate_as_barrier allocate_as_barrier.f90)
target_link_libraries(allocate_as_barrier OpenCoarrays)

add_executable(allocate_as_barrier_proc allocate_as_barrier_proc.f90)
target_link_libraries(allocate_as_barrier_proc OpenCoarrays)
