caf_compile_executable(get_array get_array_test.f90)

#caf_compile_executable(get old_get_array_test.f90)
#target_link_libraries(is_this_still_needed OpenCoarrays)

caf_compile_executable(get_self sameloc.f90)
caf_compile_executable(send_array send_array_test.f90)
caf_compile_exectuable(send_convert_char_array send_convert_char_array.f90)
caf_compile_exectuable(send_convert_nums send_convert_nums.f90)
caf_compile_executable(get_with_offset_1d get_with_offset_1d.f90)
caf_compile_executable(whole_get_array whole_get_array.f90)
caf_compile_executable(strided_get strided_get.f90)
caf_compile_executable(strided_sendget strided_sendget.f90)
